2003-03-17  Brian Kahne  <bkahne@ibmoto.com>

	* I removed strradix and moved that functionality into str().  The
	format parameter stored bit flags which represents both the radix
	and other stuff, such as whether to print a prefix or not.

2003-03-07  Brian Kahne  <bkahne@ibmoto.com>

	* rnumber is now compatible with gcc 3.2.2.

        ============== rnumber release 1.16.7 (v1_16_7) on SunOS ==============

        ============== rnumber release 1.16.7 (v1_16_7) on SunOS ==============

        ============== rnumber release 1.16.7 (v1_16_7) on SunOS ==============

        ============== rnumber release 1.16.7 (v1_16_7) on Linux ==============

2003-02-05  Brian Kahne  <bkahne@ibmoto.com>

	* Moved the Merseinne Twist class into rnumber, from rutil.

2003-01-29  Brian Kahne  <bkahne@ibmoto.com>

	* Ported rnumber to the newest automake/autoconf.

	* New option:  --enable-static allows for building a non-position-indepedent
	module.  On Solaris, --enable-profile implies --enable-static.

2003-01-23  Brian Kahne  <bkahne@ibmoto.com>

	* Re-did how profiling is setup so that on Linux, we build with
	position-independent code.

        ============== rnumber release 1.13.7 (v1_13_7) on SunOS ==============

2003-01-21  Todd Dukes  <Todd.Dukes@motorola.com>

	* added documentation for bigloo bindings.

2003-01-06  Todd Dukes  <Todd.Dukes@motorola.com>
	
	* removed dist-hook to remove rvparser.yy from ./Makefile.am this
          file was never part of rnumber.
	* changes so that 'make dist' makes a buildable distribution.

        ============== rnumber release 1.13.5 (v1_13_5) on SunOS ==============

        ============== rnumber release 1.13.4 (v1_13_4) on SunOS ==============

2003-01-06  Todd Dukes  <Todd.Dukes@motorola.com>

	*  made documentation installation optional. Small modifications to
	   documentation.

        ============== rnumber release 1.12.1 (v1_12_1) on SunOS ==============
